# PlaneText

./: CMakeLists.txt  README.md
src/: errors.cpp  errors.hpp  globals.hpp  libfunctions.cpp  main.cpp
src/Interpreter/: interpreter.cpp  interpreter.hpp
src/Lexer/: lexer.cpp  lexer.hpp
src/Parser/: parser.cpp  parser.hpp
